--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,11 @@
 *.tec
 *.bbl
 *.bbg
-*.???~
+*.xdv
 tmp.*
+mainx.*
+**/*.wav
+*.???~
 **/symseq/graphics/*.dat
 **/big5/*
 **/chinese/*
@@ -72,8 +75,6 @@ tmp.*
 **/deprecated/*
 **/discuss/*
 **/doc/*
-**/dsp/*
-**/dspp/*
 **/e1/*
 **/ec/*
 **/elife/*
