--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.obj
 *.exe
 *.tds
+*.ilg
 *.ind
 *.idx
 *.eps
@@ -74,6 +75,7 @@ mainx.*
 **/dcsd/*
 **/deprecated/*
 **/discuss/*
+**/dspp/*
 **/doc/*
 **/e1/*
 **/ec/*
