dsp material edits / reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #============================================================================
 *.jpg
 *.aux
+*.csv
 *.obj
 *.exe
 *.tds
@@ -75,6 +76,7 @@ mainx.*
 **/dcsd/*
 **/deprecated/*
 **/discuss/*
+**/dsp/*
 **/dspp/*
 **/doc/*
 **/e1/*
@@ -120,6 +122,7 @@ mainx.*
 **/sunday/*
 **/test/*
 **/tmp/*
+**/tmp*/*
 **/tract/*
 **/transcripts/*
 **/trigsys/*
