work on cross-correlation and auto-correlation

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,12 @@
 *.bbl
 *.bbg
 *.xdv
+*.zip
+.gitignore
 tmp.*
+main.*
 mainx.*
+**/makefile*
 **/*.wav
 *.???~
 **/symseq/graphics/*.dat
@@ -58,7 +62,7 @@ mainx.*
 **/2016nil/*
 **/A289358/*
 **/A290826/*
-**/abcssp/*
+**/abcstat/*
 **/address/*
 **/ap/*
 **/apple/*
