2019xcor work in progress

--- a/2019xcor/makefile
+++ b/2019xcor/makefile
@@ -19,6 +19,7 @@ FILE_SRC  = ../common/backmata.tex      \
             dtft.tex                    \
             estHx.tex                   \
             expectation.tex             \
+            normalg.tex                 \
             randseq.tex                 \
             xcordef.tex
 
