finite sums clean-up, compactification; introduce \ineqd command

--- a/abcstat/makefile
+++ b/abcstat/makefile
@@ -44,6 +44,7 @@ FILE_SRC  =                       \
   ../common/netdet.tex            \
   ../common/setstrct.tex          \
   ../common/spectral.tex          \
+  ../common/sums.tex              \
   ../common/measure.tex           \
   ../common/integrat.tex          \
   ../common/ortholat.tex          \
