--- a/common/teckit/makefile
+++ b/common/teckit/makefile
@@ -19,14 +19,9 @@ FILE_MAP  = punctuation.tec   \
             zht2zhs.tec
 
 #--------------------------------------
-# Paths
-#--------------------------------------
- PATH_TECKIT = c:\p\teckit\32-bit
-
-#--------------------------------------
 # Tools
 #--------------------------------------
- PRG_COMPILE = $(PATH_TECKIT)\teckit_compile.exe
+ PRG_COMPILE = teckit_compile.exe
 
 #--------------------------------------
 # Build Control
@@ -34,24 +29,24 @@ FILE_MAP  = punctuation.tec   \
 $(TARGET).log: $(FILE_MAP)
    dir /od >> $(TARGET).log
 
-ascii-uipa.tec: ascii-uipa.map $(PRG_COMPILE)
+ascii-uipa.tec: ascii-uipa.map
   $(PRG_COMPILE) ascii-uipa.map
 
-asciitogreek.tec: asciitogreek.map $(PRG_COMPILE)
+asciitogreek.tec: asciitogreek.map
   $(PRG_COMPILE) asciitogreek.map
 
-cjk-pinyin.tec: cjk-pinyin.map $(PRG_COMPILE)
+cjk-pinyin.tec: cjk-pinyin.map
   $(PRG_COMPILE) cjk-pinyin.map
 
-punctuation.tec: punctuation.map $(PRG_COMPILE)
+punctuation.tec: punctuation.map
   $(PRG_COMPILE) punctuation.map
 
-Preeti.tec: Preeti.map $(PRG_COMPILE)
+Preeti.tec: Preeti.map
   $(PRG_COMPILE) Preeti.map
 
-zht2zhs.tec: zht2zhs.map $(PRG_COMPILE)
+zht2zhs.tec: zht2zhs.map
   $(PRG_COMPILE) zht2zhs.map
 
-test.tec: test.map $(PRG_COMPILE)
+test.tec: test.map
   $(PRG_COMPILE) test.map
 
