baslat alternative color scheme

--- a/abcdsp/makefile
+++ b/abcdsp/makefile
@@ -6,7 +6,7 @@
 #--------------------------------------
 # TARGET
 #--------------------------------------
-TARGET = dsp
+TARGET = abcdsp
 
 #--------------------------------------
 # Files
@@ -19,6 +19,7 @@ FILE_SRC  =                                 \
             ../common/calculus.tex          \
             ../common/dsp.tex               \
             ../common/dspcalculus.tex       \
+            ../common/laplace.tex           \
             ../common/pwspace.tex           \
             ../common/pwrspec.tex           \
             ../common/sampling.tex          \
